syntax = "proto3";

package proto.users;

message UserResponse {
    string id = 1;
    string username = 2;
    string email = 3;
    string last_update = 4;
    string created_at = 5;
}

message CreateUserRequest {
    string username = 1;
    string email = 2;
    string confirm_email = 3;
    string password = 4;
    string confirm_password = 5;
}

message GetMeRequest {
    string token = 1;
}

message VerifyCredentialsRequest {
    string email = 1;
    string password = 2;
}

message VerifyCredentialsResponse {
    string id = 1;
}

message RecoverPasswordRequest {
    string email = 1;
}

message RecoverPasswordResponse {
    bool success = 1;
}

message ChangePasswordRequest {
    string token = 1;
    string password = 2;
    string confirm_password = 3;
}

message ChangePasswordResponse {
    bool success = 1;
}

service UserService {
    rpc CreateUser(CreateUserRequest) returns (UserResponse);
    rpc GetMe(GetMeRequest) returns (UserResponse);
    rpc VerifyCredentials(VerifyCredentialsRequest) returns (VerifyCredentialsResponse);
    rpc RecoverPassword(RecoverPasswordRequest) returns (RecoverPasswordResponse);
    rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse);
}
